Add RapidXML as a thirdparty lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,8 @@ endif()
 
 include_directories(${Boost_INCLUDE_DIRS}
                     ${Python_INCLUDE_DIRS}
-                    ${CMAKE_CURRENT_SOURCE_DIR}/include)
+                    ${CMAKE_CURRENT_SOURCE_DIR}/include
+                    ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/include)
 
 enable_testing()
 
