--- a/lib/netlist_paths/CMakeLists.txt
+++ b/lib/netlist_paths/CMakeLists.txt
@@ -2,6 +2,7 @@
 # distributions are expecting this.
 add_library(netlist_paths_shared SHARED
   CompileGraph.cpp
+  ReadVerilatorXML.cpp
   Netlist.cpp
   Options.cpp)
 target_include_directories(netlist_paths_shared PUBLIC
@@ -19,6 +20,7 @@ install(TARGETS netlist_paths_shared
 # Compile a static version of the library to link with the command-line tool.
 add_library(netlist_paths_static STATIC
   CompileGraph.cpp
+  ReadVerilatorXML.cpp
   Netlist.cpp
   Options.cpp)
 target_include_directories(netlist_paths_static PUBLIC
