--- a/lib/netlist_paths/CMakeLists.txt
+++ b/lib/netlist_paths/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Compile a shared library to link with the Python module since Boost
 # distributions are expecting this.
 add_library(netlist_paths_shared SHARED
-  CompileGraph.cpp
+  RunVerilator.cpp
   ReadVerilatorXML.cpp
   Netlist.cpp
   Options.cpp)
@@ -19,7 +19,7 @@ install(TARGETS netlist_paths_shared
 
 # Compile a static version of the library to link with the command-line tool.
 add_library(netlist_paths_static STATIC
-  CompileGraph.cpp
+  RunVerilator.cpp
   ReadVerilatorXML.cpp
   Netlist.cpp
   Options.cpp)
